{{$NEXT}}

0.002004  2024-05-30 15:32:33-07:00 America/Los_Angeles

    - Expand for multiple UUID generators
    - Some warnings about UUID generator quality
    - Add tests for each backend
    - Add tests for forking to make sure there are no duplicates on fork
    - Add Test2::Util::UUID to make logic reusable

0.002003  2024-05-12 11:56:39-07:00 America/Los_Angeles

    - Fix issue where duplicate UUIDs could be generated after forking

0.002002  2024-04-25 12:16:42+01:00 Europe/Lisbon

    - Fix a debian issue (#2)

0.002001  2019-08-16 15:45:11-07:00 America/Los_Angeles

    - Initial Import