@@ -40,6 +40,7 @@ Data::UUID     = 1.227
 [Prereqs / TestRequires]
 Test2::V0              = 0.000162
 Test2::Require::Module = 0.000162
+Test2::Util::Table     = 0.000162
 
 [Prereqs / DevelopRequires]
 Test::Spelling = 0.12   ; for xt/author/pod-spell.t
