@@ -1,5 +1,7 @@
 {{$NEXT}}
 
+    - Add diagnostics test that prints module versions
+
 0.002004  2024-05-30 15:32:33-07:00 America/Los_Angeles
 
     - Expand for multiple UUID generators
